fixed nav z-index

--- a/static/output.css
+++ b/static/output.css
@@ -624,6 +624,10 @@ body {
   top: 1.5rem;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
